# coclicodata

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  convert.py  environment.yml  generate.py  log.txt  metadata_template.json  pyproject.toml  requirements.txt  validate.py
ci/: convert.py
coclico-stac-edito/: catalog.json
current/: catalog.json  catalog_cloud.json  collection.json
etl/: CF_compliancy_checker.py  README.md  __init__.py  cloud_services.py  extract.py  keys.py  stac_catalogue.py  stac_utils.py
json-schema/: deltares-schema.json  schema.json
live/: catalog.json  collection.json
notebooks/: 01_DSL_change_ssh_ibc_ENS_vxs.ipynb  01_storm_surge.ipynb  02_wave_energy.ipynb  03_sea_level.ipynb  04_shoreline_evolution.ipynb  05_shoreline_change.ipynb  06_coastal_adaptation.ipynb  07_flood_risk.ipynb  13_slp.ipynb  17_slp_ar6.ipynb  18_SLR_AR5.ipynb  18_slp_ar5.ipynb  18_slr_ar5_cog.ipynb  19_coastal_mask.ipynb  19_ss_wc.ipynb  20_twl.ipynb  21_cet.ipynb  21_coastlines_osm.ipynb  25_cfhp.ipynb  25_cfhp.py  25_cfhp_stats.ipynb  25_cfhp_stats_pre.ipynb  26_pp.ipynb  26_pp_stats.ipynb  27_bc_stats.ipynb  27_be_stats.ipynb  28_ceed_LAU.ipynb  28_ceed_stats.ipynb  33_cba.ipynb  33_cba_hr.ipynb  99_LAU_NUTS.ipynb  99_LAU_NUTS2.ipynb  CF_compliancy_checker.ipynb  GCF.open.CBA_country.SSP245  GCF.open.CBA_country.SSP585  README.md  XX_WP3_SLR_BRGM.ipynb  XX_floodmaps_NC_trial.ipynb  XX_testdata_Haris.ipynb  check.ipynb  (+4 more)
scripts/: 01_ssl_stacs.py  02_wef_stacs.py  03_eesl_stacs.py  04_smd_stacs.py  05_sc_stacs.py  06_cbca_stacs.py  (+31 more)
(+196008 files in other folders)
