[tool.poetry]
name = "coclicodata"
version = "0.1.0"
description = "Python tools for the CoCliCo project"
authors = ["Etienne Kras", "Floris Calkoen", "Luis Rodriguez Galvez", "Maarten Pronk"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/openearth/coclicodata"

[tool.poetry.dependencies]
python = "^3.10"
pystac = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
# compact view of the test results with a summary at the end.
addopts = "-ra -q" 
testpaths = [
    "tests",
]
python_files = "test_*.py"



